Upgrade to 8.12.5, code cleanup, addition of missing libraries
Upgraded project file to 8.12.5, updated included appstore modules

Started Code cleanup
 - Changed MqttConnector to singleton class instead of building instances per pub/sub
 - cleaned up some variable usage
 - minor code refactoring